--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,301 @@
 .visible {
     display: block;
 }
+
+/* general style */
+* {
+    box-sizing: border-box;
+  }
+  a {
+    text-decoration: none;  
+  }
+  
+  li {
+    list-style: none;
+  }
+  
+  h1 {
+    font-family: "Poiret One";
+    color:#4a2011;
+  }
+  
+  h1::after {
+    content: "";
+    display: inline-block;
+    height: 5px;
+    width: 10px;
+    margin-left: 10px;
+    background: #4a2011;
+  }
+  
+  h2{
+    font-family: "Poiret One";
+    font-size: 1.2em;
+   color: #4a2011;
+  }
+  
+  #icon {
+    width: 50px;
+    height:50px;
+    color:#4a2011;
+  }
+  
+  ul,li, a{
+    margin: 0;
+      padding: 0px;
+  }
+  body{
+    margin: 0;
+    font-family: "Pompiere";
+    font-size: 1.5em;
+    line-height: 40px;
+  
+  }
+  
+  
+  @media (max-width: 600px){
+    h1 {
+      padding: 5px;
+      font-size: 1.2em;
+    }
+  }
+  /*header*/
+  #header {
+    background:white;
+    width: 100%;
+
+   z-index: 2; 
+    max-width: 100%;
+    padding: 10px ;
+    margin: 0 ;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 26px;
+    display: flex;
+    flex-wrap: wrap;
+    font-family: "poiret one";
+  }
+  
+  
+  
+  #header-img {
+    width: 100%;
+  }
+  
+  #nav-bar ul {
+  display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  
+  #nav-bar a {
+    font-size: 1.1em;
+    display: inline-block;
+   color: #4a2011;
+   padding: 10px;
+  }
+  
+  #nav-bar a:hover {
+    color: white;
+    background: #4a2011;
+    border-radius: 5px;
+  }
+  
+  #nav-bar ul li a:after {
+    content: "";
+    display: block;
+    height: 2px;
+    background: #00ad8b;
+    margin-top: 4px;
+    width: 0px;
+    transition: 0.3s;
+    position: absolute;
+  }
+  
+  .nav-bar ul li a:hover:after {
+    width: 100%;
+  }
+  @media (max-width: 576px){
+    .logo {
+      max-width: 50%;
+      margin:auto;
+    }
+  #header {
+    justify-content: center;
+  }
+  #nav-bar ul {
+    gap: 10px;
+  }
+  
+  #nav-bar a {
+    font-size: 0.7em;
+    display: inline-block;
+   color: #4a2011;
+   padding: 7px;
+  }
+  }
+  /* about */
+  .main {
+    max-width: 960px;
+    margin: auto;
+    text-align: center;
+  }
+  
+  .main-img {
+    opacity: 95%;
+    border-radius: 5px;
+    max-width: 100%;
+    width: 750px;
+    margin-top: 50px;
+  }
+  
+  .main-img:hover{
+    opacity:100%;
+    transition: 0.3s;
+  }
+  
+  @media (max-width: 576px){
+    .main p {
+      padding: 10px;
+     font-size: 0.9em;
+     line-height: 30px;
+    }
+  }
+  
+  /* products*/ 
+  .products {
+    max-width: 960px;
+    margin:auto;
+    margin-top: 100px;
+    
+  }
+  
+  .products ul{
+     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+  
+  .products ul li {
+    background: #fff;
+    width: 300px;
+    height: 500px;
+    text-align: center;
+    font-size: 24px;
+    border-radius: 5px;
+    opacity: 95%;
+  }
+  
+  .products ul li:hover {
+  opacity: 100%;
+  transition: 0.3s;
+  }
+  
+  .productsimg{
+    width: 100%;
+    max-width: 100%;
+    border-radius: 5px;
+  }
+  
+  #prices  {
+     box-shadow: 4px 4px 0px #6c4b3e;
+  }
+  
+  @media (max-width: 600px){
+    .products {
+      margin-top:50px;
+    }
+  }
+  /*contact*/
+  .contact {
+      max-width: 960px;
+    margin:auto;
+    margin-top: 100px;
+    margin-bottom:100px;}
+  
+  .contact p{
+    text-align: center;
+  }
+  
+  .formcontact {
+   text-align: center;
+  }
+   
+   input::placeholder {
+    color: #6c4b3e;
+  }
+  
+  #email {
+  width: 250px;
+    border-radius: 4px;
+    font-family: "Pompiere";
+    font-size: 1.3rem;
+    box-shadow: 4px 4px 0px #6c4b3e;
+     background:white;
+    border: #6c4b3e;
+    color:#4a2011;
+  }
+  
+  #submit  {
+    width: 50px;
+     border-radius: 4px;
+    font-family: "Pompiere";
+    font-size: 1.3rem;
+    background: #4a2011;
+    color: white;
+    margin: 10px;
+    opacity: 90%;
+    cursor: pointer;
+  }
+  
+  #submit:hover{
+    opacity: 100%;
+  }
+  
+  input:focus,
+  select:focus,
+  button:focus {
+    box-shadow: 0 0 0 0;
+    outline: none;}
+  
+  @media (max-width: 576px){
+    .contact p {
+      padding: 10px;
+    }
+  }
+  /*video*/
+  #video {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    opacity: 90%;
+    max-width: 100%;
+    border-radius: 5px;
+  }
+  
+  #video:hover{
+    opacity: 100%;
+    transition: 0.3s;
+  }
+  
+   .video{
+      max-width: 960px;
+      margin:auto;
+    }
+  
+  /*footer*/
+    .footer {
+      border-top: 1px solid #4a2011;
+      text-align: center;
+        opacity: 50px;
+        margin-top: 100px;
+        border-radius: 10px;
+        width: 100%;
+    }
+    .footer p{
+      padding: 5px;
+      color: #4a2011; 
+  
+     }
