--- a/css/styles.css
+++ b/css/styles.css
@@ -183,12 +183,13 @@
     margin-top: 100px;
      display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
     justify-content: center;
+    margin: 2px solid red;
   }
   
   .product-img{
-    max-width: 95%;
+    max-width: 75%;
   }
   .card{
     background: #fff;
