--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,17 @@
     border-radius: 5px;
     opacity: 95%;
   }
+
+  .card-info{
+    background: grey;
+    width: 450px;
+    height: 500px;
+    text-align: center;
+    font-size: 24px;
+    border-radius: 5px;
+    opacity: 95%;
+  }
+  
   
   .card:hover {
   opacity: 100%;
