--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,9 @@
     display: block;
 }
 #model{
-    width: 400px;
-    height:300px;
+    width: 500px;
+    height:400px;
+    margin:auto;
 }
 
 /* general style */
