--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,6 @@
 .visible {
     display: block;
 }
-#model{
-    width: 500px;
-    height:400px;
-    margin:auto;
-}
 
 /* general style */
 * {
@@ -193,7 +188,7 @@
   }
   
   .product-img{
-    max-width: 75%;
+    width: 75%;
   }
   .card{
     background: #fff;
@@ -204,15 +199,18 @@
     border-radius: 5px;
     opacity: 95%;
   }
-
+h2{
+    margin-top:100px;
+}
   .card-info{
-    background: grey;
     width: 450px;
     height: 500px;
     text-align: center;
     font-size: 24px;
     border-radius: 5px;
     opacity: 95%;
+    border: 2px solid green;
+   overflow: scroll;
   }
   
   
@@ -221,6 +219,16 @@
   transition: 0.3s;
   }
   
+#model{
+    width: 450px;
+    height:500px;
+    border: 2px solid blue;
+}
+.model{
+    width: 450px;
+    height: 500px;
+}
+
   
   #prices  {
      box-shadow: 4px 4px 0px #6c4b3e;
@@ -231,83 +239,7 @@
       margin-top:50px;
     }
   }
-  /*contact*/
-  .contact {
-      max-width: 960px;
-    margin:auto;
-    margin-top: 100px;
-    margin-bottom:100px;}
-  
-  .contact p{
-    text-align: center;
-  }
-  
-  .formcontact {
-   text-align: center;
-  }
-   
-   input::placeholder {
-    color: #6c4b3e;
-  }
-  
-  #email {
-  width: 250px;
-    border-radius: 4px;
-    font-family: "Pompiere";
-    font-size: 1.3rem;
-    box-shadow: 4px 4px 0px #6c4b3e;
-     background:white;
-    border: #6c4b3e;
-    color:#4a2011;
-  }
-  
-  #submit  {
-    width: 50px;
-     border-radius: 4px;
-    font-family: "Pompiere";
-    font-size: 1.3rem;
-    background: #4a2011;
-    color: white;
-    margin: 10px;
-    opacity: 90%;
-    cursor: pointer;
-  }
-  
-  #submit:hover{
-    opacity: 100%;
-  }
-  
-  input:focus,
-  select:focus,
-  button:focus {
-    box-shadow: 0 0 0 0;
-    outline: none;}
-  
-  @media (max-width: 576px){
-    .contact p {
-      padding: 10px;
-    }
-  }
-  /*video*/
-  #video {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    opacity: 90%;
-    max-width: 100%;
-    border-radius: 5px;
-  }
-  
-  #video:hover{
-    opacity: 100%;
-    transition: 0.3s;
-  }
-  
-   .video{
-      max-width: 960px;
-      margin:auto;
-    }
+ 
   
   /*footer*/
     .footer {
