--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@
   }
   body{
     margin: 0;
-    font-family: "Pompiere";
+    font-family: "Cutive Mono";
     font-size: 1.5em;
     line-height: 40px;
   
