--- a/css/styles.css
+++ b/css/styles.css
@@ -60,9 +60,8 @@
   }
   body{
     margin: 0;
-    font-family: "Cutive Mono";
-    font-size: 1.5em;
-    line-height: 40px;
+    font-family: "Ubuntu Mono";
+    font-size: 18px;
   
   }
   
