--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,8 @@
   }
   
   h2{
-    font-family: "Poiret One";
-    font-size: 1.2em;
+    font-family: "Cutive Mono";
+    font-size: 1em;
    color: #4a2011;
   }
   
@@ -51,7 +51,7 @@
   }
   body{
     margin: 0;
-    font-family: "Ubuntu Mono";
+    font-family: "Cutive Mono";
     font-size: 12px;
   
   }
