--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,8 @@
      display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    justify-content:space-around;
+    justify-content:center;
+    border: 2px solid blue;
 
   }
   
@@ -193,6 +194,7 @@
 #model{
     width: 350px;
     height:400px;
+    border:1px solid red;
   
 }
 .model{
