--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     font-family: "Cutive Mono";
     color:#4a2011;
     font-size: 24px;
+    text-align: left;
   }
   
   h1::after {
@@ -37,9 +38,10 @@
   }
   
   h2{
-    font-family: "Cutive Mono";
-    font-size: 1em;
-   color: #4a2011;
+    font-family: "Space Mono";
+    font-size: 1.4em;
+   text-align: left;
+   font-weight: 700;
   }
   
   ul,li, a{
@@ -202,10 +204,6 @@
     height: 400px;
 }
 
-  
-  #prices  {
-     box-shadow: 4px 4px 0px #6c4b3e;
-  }
   
   @media (max-width: 600px){
     .products {
