--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,23 @@
     height: 400px;
 }
 
+button{
+  background-color: antiquewhite;
+  font-family: "Space Mono";
+  font-weight: 700;
+  font-size: 12px;
+  border: 1px solid #4a2011;
+  border-radius: 4px;
+  padding: 5px;
+  cursor: grab;
+}
+
+button:hover{
+  background-color: rgba(89, 65, 51, 0.723);
+  border: 1px solid white;
+  color: white;
+}
+
   
   @media (max-width: 600px){
     .products {
