--- a/css/styles.css
+++ b/css/styles.css
@@ -172,10 +172,10 @@
     margin-top: 100px;
      display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 20px;
     justify-content:center;
     border: 2px solid blue;
-
+height: 800px;
   }
   
   .product-img{
@@ -189,19 +189,9 @@
     font-size: 14px;
     border-radius: 5px;
     opacity: 95%;
+    border: 1px solid red;
   }
 
-
-  .card-info{
-    width: 450px;
-    height: 500px;
-    text-align: center;
-    font-size: 14px;
-    border-radius: 5px;
-    opacity: 95%;
-
-   overflow: scroll;
-  }
   
   
   .card:hover {
