--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
   overflow: scroll;
   padding:20px;
   text-align: left;
-  background-color: antiquewhite;
+  background-color: rgb(241, 239, 237);
 }
 
 .visible {
@@ -42,6 +42,7 @@
     color:#4a2011;
     font-size: 24px;
     text-align: left;
+    padding-left: 5px;
   }
   
   h1::after {
@@ -58,6 +59,7 @@
     font-size: 1.4em;
    text-align: left;
    font-weight: 700;
+   padding-left: 5px;
   }
   
   ul,li, a{
@@ -174,7 +176,6 @@
     flex-wrap: wrap;
     gap: 20px;
     justify-content:center;
-    border: 2px solid blue;
 height: 800px;
   }
   
@@ -189,7 +190,6 @@ height: 800px;
     font-size: 14px;
     border-radius: 5px;
     opacity: 95%;
-    border: 1px solid red;
   }
 
   
@@ -202,8 +202,6 @@ height: 800px;
 #model{
     width: 350px;
     height:400px;
-    border:1px solid red;
-  
 }
 .model{
     width: 450px;
